change+fix: UUID でないときのエラー処理, response 番号の修正, query_count の削除, cleared_problems_ids の修正
